--- a/src/styles/pages/quarter/fourth.scss
+++ b/src/styles/pages/quarter/fourth.scss
@@ -1,161 +1,165 @@
-.first_page {
+.fourth_page {
   background: #fff;
-}
-.banner {
-  background: url("../../static/images/bg_skin_home_4.png");
-  background-color: #f5f5f5;
-}
-.cloth {
-  background-image: url("../../static/images/icon_style.png");
-  color: #fff;
-}
 
-.logo_name {
-  color: #333;
-}
-.title {
-  color: #fff;
-}
-
-.chart_title {
-  color: #000;
-}
-
-.chart_title i {
-  background: #FFA430;
-}
-
-.discrption li {
-  background: #F6F6F6;
-}
-.discrption li h5 {
-  color: #333
-}
-.discrption li i {
-  background: #FFA430;
-}
-.discrption li p {
-  color: #666666;
-}
-
-.floor_text p {
-  color: #333;
-}
-
-.floor_3_table {
-  color: #666;
-}
-
-.floor_3_table li:nth-child(1) {
-  background: #ffa430;
-  color: #000
-}
-
-.floor4_content {
-  color: #333;
-}
-
-// =======================================
-.floor_1 {
-  .info-descript {
-    background-color: #b853ff;
-    color: #fff;
-  }
-
-  .info-block {
-    li {
-      background-color: #f6f6f6;
-      border-top: 0.4px solid #ffa430;
-
-      .name {
-        color: #000;
-      }
-
-      .number {
-        color: #000;
-      }
-
-      .growth {
-        color: #049ca3;
-      }
+  /deep/ {
+    .banner {
+      background-image: url("../../static/images/bg_skin_home_4.png");
+      background-color: #f5f5f5;
     }
-  }
-}
 
-.pb-pe {
-  color: #fff;
-
-  .pb {
-    background: url("../../static/images/card_left_4.png");
-  }
-
-  .pe {
-    background: url("../../static/images/card_right_4.png");
-  }
-}
-
-.contrast {
-  .contrast-block {
-
-    h5 {
+    .cloth {
+      background-image: url("../../static/images/icon_style.png");
+      color: #fff;
+    }
+    
+    .logo_name {
+      color: #333;
+    }
+    .title {
+      color: #fff;
+    }
+    
+    .chart_title {
       color: #000;
     }
-
-    .name {
-      color: #000;
+    
+    .chart_title i {
+      background: #FFA430;
     }
-
-    .describe {
-      color: #000;
+    
+    .discrption li {
+      background: #F6F6F6;
     }
-
-    .spot {
-      .number {
-        color: #049ca3;
+    .discrption li h5 {
+      color: #333
+    }
+    .discrption li i {
+      background: #FFA430;
+    }
+    .discrption li p {
+      color: #666666;
+    }
+    
+    .floor_text p {
+      color: #333;
+    }
+    
+    .floor_3_table {
+      color: #666;
+    }
+    
+    .floor_3_table li:nth-child(1) {
+      background: #ffa430;
+      color: #000
+    }
+    
+    .floor4_content {
+      color: #333;
+    }
+    
+    // =======================================
+    .floor_1 {
+      .info-descript {
+        background-color: #b853ff;
+        color: #fff;
       }
-
-      span {
+    
+      .info-block {
+        li {
+          background-color: #f6f6f6;
+          border-top: 0.4px solid #ffa430;
+    
+          .name {
+            color: #000;
+          }
+    
+          .number {
+            color: #000;
+          }
+    
+          .growth {
+            color: #049ca3;
+          }
+        }
+      }
+    }
+    
+    .pb-pe {
+      color: #fff;
+    
+      .pb {
+        background-image: url("../../static/images/card_left_4.png");
+      }
+    
+      .pe {
+        background-image: url("../../static/images/card_right_4.png");
+      }
+    }
+    
+    .contrast {
+      .contrast-block {
+    
+        h5 {
+          color: #000;
+        }
+    
+        .name {
+          color: #000;
+        }
+    
+        .describe {
+          color: #000;
+        }
+    
+        .spot {
+          .number {
+            color: #049ca3;
+          }
+    
+          span {
+            color: #000;
+          }
+        }
+    
+        .circle {
+          background-image: url("../../static/images/bg_round_4.png");
+        }
+    
+        .rect {
+          background-color: #f6f6f6;
+        }
+      }
+    }
+    
+    .floor_2 {
+      color: #fff;
+    
+      .now {
+        .bonus {
+          background-image: url("../../static/images/bg_rhombus_4.png");
+        }
+      }
+    
+      .past {
         color: #000;
       }
     }
-
-    .circle {
-      background: url("../../static/images/bg_round_4.png");
+    
+    .fjdyj-title {
+      border-left: 0.3rem solid #FFA430;
+      color: #000;
     }
-
-    .rect {
-      background-color: #f6f6f6;
+    
+    .tabs {
+      color: #768591;
+      
+      .ly-tab {
+        background-color: #f6f6f6;
+      }
+    }
+    
+    .business-info {
+      color: #000;
     }
   }
-}
-
-.floor_2 {
-  color: #fff;
-
-  .now {
-    .bonus {
-      background: url("../../static/images/bg_rhombus_4.png");
-    }
-  }
-
-  .past {
-    color: #000;
-  }
-}
-
-.fjdyj-title {
-  border-left: 0.3rem solid #FFA430;
-  color: #000;
-}
-
-.tabs {
-  color: #768591;
-  
-  .ly-tab {
-    background-color: #f6f6f6;
-  }
-}
-
-.business-info {
-  color: #000;
 }
