调整部分代码

--- a/src/styles/pages/quarter/first.scss
+++ b/src/styles/pages/quarter/first.scss
@@ -4,7 +4,7 @@
 
   /deep/ {
     .banner {
-      background: url("../../static/images/bg_skin_home_1.png");
+      background-image: url("../../static/images/bg_skin_home_1.png");
     }
 
     .logo_name {
